--- a/index.html
+++ b/index.html
@@ -33,11 +33,15 @@
             Ургенч
           </p>
         </div>
+        <button class="nav-top__menu-btn nav-top__menu-btn--close">
+         <span class="visually-hidden"> Открыть . закрыть</span>
+        </button>
         <!--Контейнер для телефона и адреса-->
         <p class="nav-top__logo">
           <!-- Логотип сайта -->
           Lorem, ipsum dolor.
         </p>
+        <!--Иконки слева -->
         <ul class="nav-top__icon-list">
           <!--Иконки слева -->
           <li class="nav-top__icon">
@@ -65,10 +69,10 @@
             </a>
           </li>
         </ul>
-        <!--Иконки слева -->
+        
       </div>
       <!--Nav top-->
-      <ul class="nav-list">
+      <ul class="nav-list nav-list--close">
         <!--Главное меню-->
         <li class="nav-list__item">
           <a href="#" class="nav-list__link">
@@ -174,7 +178,7 @@
               <!-- Ценв товара -->
               <b class="item__price">250 000 сум</b>
               <!-- Кнопка для перехода по товару -->
-              <a href="" class="item__button button">Подробнее</a>
+              <a href="item.html" class="item__button button">Подробнее</a>
             </div>
           </div>
         </li>
