--- a/item.html
+++ b/item.html
@@ -32,6 +32,7 @@
             </svg>
             Ургенч
           </p>
+          <button class="nav-top__menu-btn nav-top__menu-btn--close"></button>
         </div>
         <!--Контейнер для телефона и адреса-->
         <p class="nav-top__logo">
@@ -441,6 +442,7 @@
       </div>
     </div>
   </footer>
+  <script src="scripts/menu.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="scripts/slick.min.js"></script>
   <script src="scripts/main.js"></script>
