--- a/index.html
+++ b/index.html
@@ -902,6 +902,7 @@
       </div>
     </div>
   </footer>
+  <script src="scripts/menu.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="scripts/slick.min.js"></script>
   <script src="scripts/main.js"></script>
